# fcitx5-sitelen-pona

./: CMakeLists.txt  README.md  table_gen.py
install/usr/local/share/fcitx5/addon/: sitelen-pona.conf
install/usr/local/share/fcitx5/inputmethod/: sitelen-pona.conf
src/: CMakeLists.txt  sitelen-pona-addon.conf.in  sitelen-pona-old.txt  sitelen-pona.txt
